# heavenCoint

./: .env.example  .gitignore  CLAUDE.md  README.md  disenoDashboard.pen  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 26414e5db68c_add_assets_price_history_macro_.py  57be196cbe30_add_kpi_snapshots_table.py  64a73bca7495_add_strategies_table.py  66ba73ca262f_create_users_table.py  a3e9f1b2c4d5_add_oscillator_data_table.py
backend/app/: main.py
backend/app/api/v1/: assets.py  auth.py  health.py  kpis.py  macro.py  oscillators.py  router.py  schwab.py  strategies.py
backend/app/core/: config.py  database.py  deps.py  redis.py  security.py
backend/app/models/: asset.py  base.py  kpi_snapshot.py  macro_indicator.py  oscillator_data.py  price_history.py  strategy.py  user.py
backend/app/schemas/: asset.py  auth.py
backend/app/services/: risk_manager.py  schwab_client.py
backend/app/services/market_data/: binance_client.py  fred_client.py  ingestion.py  polygon_client.py  twelvedata_client.py  yfinance_client.py
backend/app/services/quant/: __init__.py  oscillators.py
backend/app/tests/: conftest.py  test_api.py  test_data_ingestion.py  test_oscillators.py  test_quant_engine.py  test_risk_manager.py
docs/: HEAVEN_COINT_Documentacion_Tecnica_v1.0_by_Open_IA.md  HEAVEN_COINT_Documentacion_Tecnica_v1.0_by_claude.docx  HEAVEN_COINT_Documentacion_Tecnica_v1.0_by_claude.md  PHASE_1_DESIGN_ARTIFACTS.md  (+4 more)
(+37 files in other folders)
