[project]
name = "heavencoint-backend"
version = "0.1.0"
description = "Heaven Coint — Quantitative Trading Platform Backend"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "S101",  # assert in tests is fine
    "B008",  # function call in default arg (FastAPI Depends)
    "S104",  # binding to 0.0.0.0 is intentional for Docker
    "S105",  # false positives on default strings (overridden by env vars)
]

[tool.ruff.lint.per-file-ignores]
"app/tests/**" = ["S101", "S106"]
"alembic/**" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
